# stock-dashboard-railway

./: .clinerules  CLAUDE.md  Local-setup.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_app.py
.claude/arch/: skill.md
.claude/pm/: skill.md
.claude/rev/: skill.md
docs/: development-tasks.md  stock-list.md  technical-spec.md  開発方針.md
templates/: index.html  stocks_partial.html
