[project]
name = "stock-dashboard-railway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.109.0",
    "jinja2==3.1.3",
    "python-multipart==0.0.6",
    "pytz==2024.1",
    "uvicorn[standard]==0.27.0",
    "yfinance==0.2.36",
]
